# backend/internal/handlers/raceplans/root.go
@@ -1,0 +1,23 @@
+package handlers
+
+import (
+	"sharpl-backend/generated/restapi/operations"
+	"sharpl-backend/generated/restapi/operations/race_plans"
+	"sharpl-backend/internal/service"
+)
+
+type RacePlanHandler struct {
+	racePlanService *service.RacePlanService
+}
+
+func NewRacePlanHandler(racePlanService *service.RacePlanService) *RacePlanHandler {
+	return &RacePlanHandler{
+		racePlanService: racePlanService,
+	}
+}
+
+func (h *RacePlanHandler) RegisterHandlers(api *operations.SharplAPIAPI) {
+	api.RacePlansGetRacePlansHandler = race_plans.GetRacePlansHandlerFunc(h.GetRacePlans)
+	api.RacePlansGetRacePlanHandler = race_plans.GetRacePlanHandlerFunc(h.GetRacePlan)
+	api.RacePlansFilterRacePlansHandler = race_plans.FilterRacePlansHandlerFunc(h.FilterRacePlans)
+}
